# chess-fen-predictor

./: README.md  pyproject.toml  training.ipynb
chessing/: __init__.py  board_reader.py  dataset.py  model.pth  model.py  training.py
runs/chess_training/: events.out.tfevents.1741912203.NZ-MMFP22C32DG.local.50862.0  events.out.tfevents.1741912997.NZ-MMFP22C32DG.local.50862.1
