[project]
name = "chess-fen-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
